[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "SAC-Tello"
version = "0.0.6"
authors = [
  { name="Michael Huelsman", email="michael.huelsman@gmail.com" },
]
description = "A Python-based DJI Tello interface which utilizes parallel processing."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.23.4",
    "opencv-python>=4.6.0.66",
    "face_recognition>=1.3.0",
    "pygame>=2.2.0",
]
[project.urls]
"Homepage" = "https://github.com/xLeachimx/SAC-Tello"
"Bug Tracker" = "https://github.com/xLeachimx/SAC-Tello/issues"
