[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build]
exclude = [
    "tello_drive.py",
]
[project]
name = "SAC-Tello"
version = "0.1.8"
authors = [
  {name="Michael Huelsman", email="michael.huelsman@gmail.com"},
]
description = "A Python-based DJI Tello interface. Created primaily for educational use."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.23.4",
    "opencv-python>=4.10.0.84",
    "pygame>=2.5.0",
]
[project.urls]
"Homepage" = "https://github.com/xLeachimx/SAC-Tello"
"Bug Tracker" = "https://github.com/xLeachimx/SAC-Tello/issues"
